Fixed side nav z-index

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
     .sb-fixed {
         position: fixed;
         width: 150px;
-        top: 50px;
+        top: 70px;
+        z-index: 10;
     }
 
     #main {
